# xenforo-markdown

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  build.mjs  dark-detection.js  important-notes.en.md  important-notes.md  important-notes.zh.md  markdown.css  markdown.js  markdown.less  package-lock.json  package.json  tsconfig.json  watch.mjs  xf-markdown.js  xf-markdown.ts  xss.js
.github/workflows/: build.yml  node.js.yml
docs/: local-testing-note.md
src/: main.ts  markdown.less  observers.ts  parse.ts  renderTargets.ts
src/utils/: addColorSchemeClass.ts  printXFMDAscii.ts  removeMarkdown.ts
xfmd-rs/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
xfmd-rs/src/: common.rs  lib.rs  markdown.rs  observer.rs  xss_filter_configurations.rs
xfmd-rs/src-js/: index.html  index.ts
xfmd-rs/src-js/styles/: colors.scss  global.scss  typography.scss  variables.scss
