[package]
name = "xfmd-rs"
version = "0.1.0"
edition = "2024"
public = false
authors =  ["Subilan"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ammonia = "4.1.1"
pulldown-cmark = { version = "0.13.0", default-features = false }
wasm-bindgen = "0.2.100"

[dependencies.web-sys]
version = "0.3.77"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'ConsoleInstance'
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
