[package]
name = "xfmd-rs"
version = "0.1.0"
edition = "2024"
public = false
authors = ["Subilan"]

[lib]
crate-type = ["cdylib"]

[dependencies]
ammonia = "4.1.1"
console_error_panic_hook = "0.1.7"
maplit = "1.0.2"
pulldown-cmark = { version = "0.13.0", default-features = false, features = ["html"] }
regex = "1.11.1"
wasm-bindgen = { version = "0.2.100" }
web-sys = { version = "0.3.77", features = ["Document", "Element", "HtmlElement", "Node", "MutationRecord", "MutationObserverInit", "Window", "NodeList", "console", "MutationObserver", "Location", "CssStyleDeclaration", "DomTokenList"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
